<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ClikOneFragment"
    android:id="@+id/clik_plus_many"
    android:background="#F4F4F4">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clik"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_corner_card" />

    <ImageView
        android:id="@+id/img_corner_card"
        android:src="@drawable/dizane_klic_corner_card"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_balansa"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="34sp"
        android:text="@string/заработок"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/img_corner_card"
        app:layout_constraintStart_toStartOf="@+id/img_corner_card"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintTop_toTopOf="@+id/tv_balansa"
        app:layout_constraintStart_toStartOf="@+id/img_corner_card"
        app:layout_constraintEnd_toEndOf="@+id/img_corner_card"
        android:layout_marginTop="86dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#17808E">

            <TextView
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_67_987340"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingEnd="49sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="39dp"
                android:paddingStart="12dp"
                android:src="@drawable/img_carta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/balans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_many"
                android:paddingStart="12dp"
                android:paddingBottom="39dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_many"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="50dp"
                android:paddingBottom="12dp"
                android:text="@string/_0"
                android:textSize="44sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:text="@string/_09_26"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/klik_ruca"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_corner_card"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>